--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nesbot/carbon",
+    "name": "top/carbon",
     "type": "library",
     "description": "A simple API extension for DateTime.",
     "keywords": [
@@ -7,19 +7,8 @@
         "time",
         "DateTime"
     ],
-    "homepage": "http://carbon.nesbot.com",
-    "support": {
-        "issues": "https://github.com/briannesbitt/Carbon/issues",
-        "source": "https://github.com/briannesbitt/Carbon"
-    },
+    "homepage": "http://money24.com",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Brian Nesbitt",
-            "email": "brian@nesbot.com",
-            "homepage": "http://nesbot.com"
-        }
-    ],
     "require": {
         "php": ">=5.3.0",
         "symfony/translation": "~2.6|~3.0"
