--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "top/carbon",
+    "replace": {
+        "nesbot/carbon": "*"
+    },
     "type": "library",
     "description": "A simple API extension for DateTime.",
     "keywords": [
